tests/rosetta/out/C/csv-data-manipulation.error
cc: exit status 1
/tmp/csv-data-manipulation.c:154:7: error: duplicate member ‘_’
  154 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:155:7: error: duplicate member ‘_’
  155 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:156:7: error: duplicate member ‘_’
  156 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:157:7: error: duplicate member ‘_’
  157 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:158:7: error: duplicate member ‘_’
  158 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:159:7: error: duplicate member ‘_’
  159 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:160:7: error: duplicate member ‘_’
  160 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:161:7: error: duplicate member ‘_’
  161 |   int _;
      |       ^
/tmp/csv-data-manipulation.c:162:7: error: duplicate member ‘_’
  162 |   int _;
      |       ^
/tmp/csv-data-manipulation.c: In function ‘join’:
/tmp/csv-data-manipulation.c:184:34: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  184 |       char *tmp1 = concat_string(res, sep);
      |                                  ^~~
/tmp/csv-data-manipulation.c:119:34: note: expected ‘char *’ but argument is of type ‘const char *’
  119 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/csv-data-manipulation.c:187:32: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  187 |     char *tmp2 = concat_string(res, xs.data[i]);
      |                                ^~~
/tmp/csv-data-manipulation.c:119:34: note: expected ‘char *’ but argument is of type ‘const char *’
  119 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/csv-data-manipulation.c: In function ‘parseIntStr’:
/tmp/csv-data-manipulation.c:198:11: error: request for member ‘len’ in something not a structure or union
  198 |   if ((str.len > 0 && tmp3 == "-")) {
      |           ^
/tmp/csv-data-manipulation.c:203:27: error: invalid initializer
  203 |   map_string_int digits = (tmp_item_t){._ = 0,
      |                           ^
/tmp/csv-data-manipulation.c:213:18: error: request for member ‘len’ in something not a structure or union
  213 |   while ((i < str.len)) {
      |                  ^
/tmp/csv-data-manipulation.c: In function ‘main’:
/tmp/csv-data-manipulation.c:229:15: error: redefinition of ‘rows’
  229 |   list_string rows = list_string_create(3);
      |               ^~~~
/tmp/csv-data-manipulation.c:225:15: note: previous definition of ‘rows’ with type ‘list_string’
  225 |   list_string rows = list_string_create(3);
      |               ^~~~
/tmp/csv-data-manipulation.c:233:15: error: redefinition of ‘rows’
  233 |   list_string rows = list_string_create(3);
      |               ^~~~
/tmp/csv-data-manipulation.c:229:15: note: previous definition of ‘rows’ with type ‘list_string’
  229 |   list_string rows = list_string_create(3);
      |               ^~~~
/tmp/csv-data-manipulation.c:237:15: error: redefinition of ‘rows’
  237 |   list_string rows = list_string_create(3);
      |               ^~~~
/tmp/csv-data-manipulation.c:233:15: note: previous definition of ‘rows’ with type ‘list_string’
  233 |   list_string rows = list_string_create(3);
      |               ^~~~
/tmp/csv-data-manipulation.c:241:27: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  241 |   list_int rows_data[] = {rows, rows, rows, rows};
      |                           ^~~~
/tmp/csv-data-manipulation.c:241:33: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  241 |   list_int rows_data[] = {rows, rows, rows, rows};
      |                                 ^~~~
/tmp/csv-data-manipulation.c:241:39: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  241 |   list_int rows_data[] = {rows, rows, rows, rows};
      |                                       ^~~~
/tmp/csv-data-manipulation.c:241:45: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  241 |   list_int rows_data[] = {rows, rows, rows, rows};
      |                                             ^~~~
/tmp/csv-data-manipulation.c:242:17: error: conflicting types for ‘rows’; have ‘list_list_int’
  242 |   list_list_int rows = {4, rows_data};
      |                 ^~~~
/tmp/csv-data-manipulation.c:237:15: note: previous definition of ‘rows’ with type ‘list_string’
  237 |   list_string rows = list_string_create(3);
      |               ^~~~
/tmp/csv-data-manipulation.c:243:12: error: conflicting types for ‘rows’; have ‘list_int’
  243 |   list_int rows = rows;
      |            ^~~~
/tmp/csv-data-manipulation.c:242:17: note: previous definition of ‘rows’ with type ‘list_list_int’
  242 |   list_list_int rows = {4, rows_data};
      |                 ^~~~
/tmp/csv-data-manipulation.c:246:50: error: incompatible type for argument 1 of ‘concat_list_string’
  246 |   list_string tmp6 = concat_list_string(rows.data[0], tmp5);
      |                                         ~~~~~~~~~^~~
      |                                                  |
      |                                                  int
/tmp/csv-data-manipulation.c:111:51: note: expected ‘list_string’ but argument is of type ‘int’
  111 | static list_string concat_list_string(list_string a, list_string b) {
      |                                       ~~~~~~~~~~~~^
/tmp/csv-data-manipulation.c:249:50: error: incompatible type for argument 1 of ‘concat_list_string’
  249 |   list_string tmp8 = concat_list_string(rows.data[0], tmp7);
      |                                         ~~~~~~~~~^~~
      |                                                  |
      |                                                  int
/tmp/csv-data-manipulation.c:111:51: note: expected ‘list_string’ but argument is of type ‘int’
  111 | static list_string concat_list_string(list_string a, list_string b) {
      |                                       ~~~~~~~~~~~~^
/tmp/csv-data-manipulation.c:250:18: error: incompatible types when assigning to type ‘int’ from type ‘list_string’
  250 |   rows.data[0] = tmp8;
      |                  ^~~~
/tmp/csv-data-manipulation.c:253:36: error: subscripted value is neither array nor pointer nor vector
  253 |     for (int tmp9 = 0; rows.data[i][tmp9] != '\0'; tmp9++) {
      |                                    ^
/tmp/csv-data-manipulation.c:255:26: error: subscripted value is neither array nor pointer nor vector
  255 |       s[0] = rows.data[i][tmp9];
      |                          ^
/tmp/csv-data-manipulation.c:265:15: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  265 |     char *r = rows.data[tmp12];
      |               ^~~~
/tmp/csv-data-manipulation.c:266:25: error: incompatible type for argument 1 of ‘join’
  266 |     printf("%d\n", join(r, ","));
      |                         ^
      |                         |
      |                         char *
/tmp/csv-data-manipulation.c:179:30: note: expected ‘list_string’ but argument is of type ‘char *’
  179 | const char *join(list_string xs, char *sep) {
      |                  ~~~~~~~~~~~~^~
