tests/rosetta/out/C/csv-data-manipulation.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static int i = 1;

typedef struct {
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

const char *join(list_string xs, char *sep) {
  const char *res = "";
  int i = 0;
  while (i < xs.len) {
    if (i > 0) {
      char *tmp1 = concat_string(res, sep);
      res = tmp1;
    }
    char *tmp2 = concat_string(res, xs.data[i]);
    res = tmp2;
    i = i + 1;
  }
  return res;
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp3 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp3 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int digits = (tmp_item_t){._ = 0,
                                       ._ = 1,
                                       ._ = 2,
                                       ._ = 3,
                                       ._ = 4,
                                       ._ = 5,
                                       ._ = 6,
                                       ._ = 7,
                                       ._ = 8,
                                       ._ = 9};
  while ((i < str.len)) {
    char *tmp4 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp4);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

int main() {
  list_string rows = list_string_create(3);
  rows.data[0] = "A";
  rows.data[1] = "B";
  rows.data[2] = "C";
  list_string rows = list_string_create(3);
  rows.data[0] = "1";
  rows.data[1] = "2";
  rows.data[2] = "3";
  list_string rows = list_string_create(3);
  rows.data[0] = "4";
  rows.data[1] = "5";
  rows.data[2] = "6";
  list_string rows = list_string_create(3);
  rows.data[0] = "7";
  rows.data[1] = "8";
  rows.data[2] = "9";
  list_int rows_data[] = {rows, rows, rows, rows};
  list_list_int rows = {4, rows_data};
  list_int rows = rows;
  list_string tmp5 = list_string_create(1);
  tmp5.data[0] = "SUM";
  list_string tmp6 = concat_list_string(rows.data[0], tmp5);
  list_string tmp7 = list_string_create(1);
  tmp7.data[0] = "SUM";
  list_string tmp8 = concat_list_string(rows.data[0], tmp7);
  rows.data[0] = tmp8;
  while (i < rows.len) {
    int sum = 0;
    for (int tmp9 = 0; rows.data[i][tmp9] != '\0'; tmp9++) {
      char s[2];
      s[0] = rows.data[i][tmp9];
      s[1] = '\0';
      sum = sum + parseIntStr(s);
    }
    char *tmp10 = _str(sum);
    char *tmp11 = _str(sum);
    rows.data[i] = 0;
    i = i + 1;
  }
  for (int tmp12 = 0; tmp12 < rows.len; tmp12++) {
    char *r = rows.data[tmp12];
    printf("%d\n", join(r, ","));
  }
  return 0;
}
